--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,35 @@
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
 body {
-  font-family: "Open Sans", sans-serif;
-  background: #000;
-  color: #fafafa;
-  
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  height: 100vh;
+	line-height: 1;
 }
-
-div {
-  margin: auto;
+ol, ul {
+	list-style: none;
 }
-
-h1 {
-  font-size: 1.17em;
+blockquote, q {
+	quotes: none;
 }
-
-@media (max-width: 425px) {
-  h1 {
-      font-size: .83em;
-  }
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+a {
+    text-decoration: none;
+}
+li {
+    list-style: none;
+}
+figure > img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
 }
