--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,6 @@
 
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
+  @import url('https://fonts.googleapis.com/css2?family=Alice&family=DM+Serif+Display&family=Mogra&family=Poltawski+Nowy&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Lora&display=swap');
 a {
     text-decoration: none;
 }
@@ -33,3 +16,44 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+html {font-size: 100%;} /*16px*/
+
+body {
+  border-radius: 18px;
+  background: linear-gradient(145deg, #e6e6e6, #ffffff);
+  box-shadow:  5px 5px 10px #666666,
+               -5px -5px 10px #ffffff;
+  font-family: 'Noto Serif NP Hmong', serif;
+  font-weight: 400;
+  line-height: 1.75;
+  color: #000000;
+}
+
+p {margin-bottom: 1rem;
+	font-family: 'Lora', serif;}
+
+h1, h2, h3, h4, h5 {
+  margin: 3rem 0 1.38rem;
+  font-family: 'Noto Serif NP Hmong', serif;
+  font-weight: 400;
+  line-height: 1.3;
+}
+
+h1 {
+  margin-top: 0;
+  font-size: 3.052rem;
+  font-family: 'Poltawski Nowy', serif;
+}
+
+h2 {font-size: 2.441rem;
+	font-family: 'Mogra', cursive;}
+
+h3 {font-size: 1.953rem;
+	font-family: 'DM Serif Display', serif;}
+
+h4 {font-size: 1.563rem;
+	font-family: 'Alice', serif;}
+
+h5 {font-size: 1.25rem;}
+
+small, .text_small {font-size: 0.8rem;}
